# pre-meeting-brief

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: config.py  index.py  llm.py
api/db/: models.py  session.py
api/distribution/: __init__.py  calendar_writeback.py
api/pipeline/: graph.py  merge.py  nodes.py  progress.py  prompts.py  state.py
api/providers/: attio.py  base.py  crunchbase.py  pitchbook.py  specter.py  specter_mcp_client.py
api/routes/: agenda.py  briefs.py  health.py  triggers.py
api/seeds/: seed.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/approach/: page.tsx
app/pipeline/: page.tsx
components/: AdminForm.tsx  ArchitectureSvg.tsx  AuditPanel.tsx  BriefCard.tsx  CalendarDay.tsx  CalendarEventCard.tsx  ConfidenceDot.tsx  DashboardSection.tsx  DistributionBadge.tsx  HowAssembled.tsx  PipelineStageCard.tsx  RecentRuns.tsx  RunStatus.tsx  SampleRunTrace.tsx  SiteFooter.tsx  ThesisFitBadge.tsx  TocSidebar.tsx  TopBar.tsx
docs/: approach.md  review-gaps.md
eval/: __init__.py  rubric.py  runner.py
eval/golden/: criteria.json
fixtures/anduril.com/: attio.json  (+3 more)
lib/: api.ts  types.ts
tests/: conftest.py  test_data_quality.py  test_db_models.py  test_graph.py  test_health.py  test_llm.py  test_merge.py  test_providers.py  test_qualification.py  test_research.py  test_routes.py  test_specter_mcp.py  test_specter_mcp_client.py  test_state.py  test_synthesis.py  test_triggers.py
(+36 files in other folders)
