[project]
name = "pre-meeting-brief"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "psycopg[pool]>=3.2.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
